<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/ma_vue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/hello"
        android:textColor="@color/magenta"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/view_poids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            android:text="@string/i_poids"
            android:textColor="#FF0000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/view_input_poid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border_arrondi"
            android:hint="@string/iPoids"
            android:inputType="number"
            android:padding="10dp"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/view_taille"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"

            android:padding="10dp"

            android:text="@string/MonDeuxièmetitre"
            android:textColor="#FF0000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/view_input_taille"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border_arrondi"
            android:hint="@string/i_taille"
            android:inputType="number"
            android:padding="10dp"

            />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/view_radio_groupe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/view_rbtn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_metre" />

        <RadioButton
            android:id="@+id/view_rbtn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/i_centimetre" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/view_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/checkBox" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/view_btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:backgroundTint="@color/gris"
            android:gravity="center_vertical"
            android:text="@string/imc_cl" />

        <Button
            android:id="@+id/view_btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:backgroundTint="@color/gris"
            android:gravity="center"
            android:text="@string/raz_cl" />

    </LinearLayout>

    <TextView
        android:id="@+id/view_resultat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/i_resultat" />

    <TextView
        android:id="@+id/view_txt_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/i_guide_txt" />
</LinearLayout>